--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,106 +1,93 @@
-/********
+/*cabeçalho*/
 
-Cabeçalho do site - menu 
-
-
-*********/
-
-header img {
-    height: 70px;
-    width: 70px;
+header img 
+{
+height: 70px;
+width: 70px;
 }
 
+/*Conteudo principal*/
 
 
-/******************
+/*banner*/
 
-Conteudo
+#section-banners img {
+height: 500px;
+}
 
-************/
-
-/**/
+/*Produtos vendidos*/
 
 #section-vendidos {
-    text-align: center;
+text-align: center;
 }
 
 #section-vendidos h2 {
-    text-align: center;
-    font-weight: bold;
 
-    padding: 20px;
+font-weight: bold;
+padding: 20px;
 }
 
 #section-vendidos img {
-    height: 300px;
-    border-radius: 10px;
+height: 300px;
+border-radius: 10px;
 }
 
 #section-vendidos .card {
-    margin: 5px;
-    border: 1px solid #ccc;
-    border-radius: 10px;
+margin: 5px;
+border: 1px solid #ccc;
+border-radius: 10px;
 }
 
 #section-vendidos .preco {
-    color: red;
-    font-size: 18px;
-    font-weight: bold;
+color: red;
+font-size: 18px;
+font-weight: bold;
 }
 
-/*************
-    Rodape
-*************/
+/*Rodapé*/
 
 footer {
-    text-align: center;
-}
-
-footer p {
+    position: relative;
+    bottom:0;
+    }
+    footer p {
     text-align: center;
     font-weight: bold;
-
     padding: 10px;
-}
+    }
 
-/*Botão ao Voltar topo*/
+/*Botão Voltar topo*/
 
 #voltar-topo {
-    position: fixed;
-    bottom: 5px;
-    right: 50px;
-
+position: fixed;
+bottom: 5px;
+right: 50px;
 }
 
-/* ****************
-    página de login
-    
-    ********************/
+/* página de login  */
+
+#section-login {
+margin-top: 100px;
+}
 
 #section-login h1 {
-    text-align: center;
-
+text-align: center;
 }
 
 #section-login input {
-    width: 100%;
-
+width: 100%;
 }
 
-#section-banners img {
-    height: 500px;
+/* Formulário de cadastro*/
+
+#section-cadastro {
+padding: 5px;
+text-align: center;
+background-color ::#fff;
 }
 
-
-/* Box de informações de cadastro*/
-#panel,
-#flip {
-    padding: 5px;
-    text-align: center;
-    background-color: #fff;
+#form-cadastrar {
+padding: 50px;
+display: none;
 }
 
-#panel {
-    padding: 50px;
-    display: none;
-}
